err/mir.qualia.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mir'...
Listing './lib/python3.5/site-packages/mir/qualia'...
Compiling './lib/python3.5/site-packages/mir/qualia/comment.py'...
***   File "./lib/python3.5/site-packages/mir/qualia/comment.py", line 44
    fr'^(?P<indent>\s*){re.escape(comment_prefix)}')
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mir/qualia/indent.py'...
***   File "./lib/python3.5/site-packages/mir/qualia/indent.py", line 53
    return f'{cls}({self._prefix!r})'
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mir/qualia/qualifier.py'...
***   File "./lib/python3.5/site-packages/mir/qualia/qualifier.py", line 45
    return f'{cls}(qualities={self._qualities!r})'
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mir.qualia-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qualia'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
